[workspace]
resolver = "2"
members = ["gsession", "gword"]

[workspace.package]
authors = ["10086"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false



[workspace.dependencies]
gstd = "1.4.2"
gmeta = "1.4.2"
gear-wasm-builder = "1.4.2"
gtest = "1.4.2"
gclient = "1.4.2"
tokio = "1"
xshell = "0.2"
anyhow = "1"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
gsession-io.path = "gsession/io"
gsession.path = "gsession"
gword.path="gword"
gword-io.path="gword/io"





